# sped

./: .env  Makefile  docker-compose.yml  pyproject.toml
new_sped/: main.py
new_sped/datas/: dados_clientes.xlsx
new_sped/db/: crud.py  databases.py  models.py  schemas.py
new_sped/scripts/: __init__.py  cert_pi.py  sped.py  sped_erro.py
